--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -4,8 +4,7 @@
     align-items: center;
     position: relative;
     height: 60vh;
-    background-image: linear-gradient(to right bottom, lightgray, black),
-      url("../../img/anas-alshanti-feXpdV001o4-unsplash.jpg");
+    background-image: linear-gradient(to right bottom, lightgray, black);
     background-size: cover;
     background-position: center;
 
