--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,37 +1,37 @@
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
 html {
-    font-size: 62.5%; // 1rem = 10px
-    box-sizing: border-box;
+  font-size: 62.5%; // 1rem = 10px
+  box-sizing: border-box;
 
-    @include respond(tab-land) {
-        font-size: 50%; // 8px
-    }
+  @include respond(tab-land) {
+    font-size: 50%; // 8px
+  }
 
-    @include respond(tab-port) {
-        font-size: 43.75%; // 7px
-    }
+  @include respond(tab-port) {
+    font-size: 43.75%; // 7px
+  }
 
-    @include respond(phone) {
-        font-size: 31.2%; // 5px
-    }
+  @include respond(phone) {
+    font-size: 31.2%; // 5px
+  }
 
-    @include respond(big-desktop) {
-        font-size: 65%; // 11px
-    }
+  @include respond(big-desktop) {
+    font-size: 65%; // 11px
+  }
 }
 
 body {
-    font-family: 'Roboto', serif;
-    font-weight: 400;
-    line-height: 1.7;
-    color: #EEF4F2;
-    background-color: #233656;
-    overflow-x: hidden;
+  font-family: "Roboto", serif;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #eef4f2;
+  background-color: #264653;
+  overflow-x: hidden;
 }
