--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,23 +1,23 @@
 footer {
-	height: 200px;	
+  height: 200px;
 }
 
 #site-footer {
-	display: flex;
-	justify-content: center;
-	align-items: flex-end;
-	position: fixed;
-	z-index: -1;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	padding: 25px 0;
-	background-color: #2A2A2A;
-	min-height: 20vw;
-	background-size: cover;
-	background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  position: fixed;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 25px 0;
+  background-color: #2a2a2a;
+  min-height: 20vw;
+  background-size: cover;
+  background-position: center;
 }
 
 .copyright span {
-	font-size: 20px;
+  font-size: 20px;
 }
