--- a/sass/main.css
+++ b/sass/main.css
@@ -112,11 +112,11 @@ html {
 }
 
 body {
-  font-family: 'Roboto', serif;
+  font-family: "Roboto", serif;
   font-weight: 400;
   line-height: 1.7;
-  color: #EEF4F2;
-  background-color: #233656;
+  color: #eef4f2;
+  background-color: #264653;
   overflow-x: hidden;
 }
 
@@ -332,7 +332,7 @@ footer {
   right: 0;
   bottom: 0;
   padding: 25px 0;
-  background-color: #2A2A2A;
+  background-color: #2a2a2a;
   min-height: 20vw;
   background-size: cover;
   background-position: center;
@@ -706,10 +706,6 @@ footer {
           align-items: center;
   position: relative;
   height: 60vh;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(lightgray), to(black));
-  background-image: linear-gradient(to right bottom, lightgray, black);
-  background-size: cover;
-  background-position: center;
 }
 
 .section-start--text {
@@ -876,8 +872,6 @@ footer {
       justify-content: space-around;
   width: 100%;
   margin: auto;
-  background: -webkit-gradient(linear, left top, left bottom, from(#233656), color-stop(65%, #7b9ba6));
-  background: linear-gradient(to bottom, #233656, #7b9ba6 65%);
 }
 
 .section-technology--container .icon-box {
