--- a/sass/main.css
+++ b/sass/main.css
@@ -149,10 +149,10 @@ body {
 
 .anim-border--right {
   display: block;
-  position: absolute;
-  border-bottom: 4px solid #ccc;
+  position: relative;
+  border-top: 4px solid #ccc;
   width: 65%;
-  top: 260px;
+  top: 100px;
   -webkit-animation: text-border-rigth 3s ease-out;
   animation: text-border-rigth 3s ease-out;
 }
@@ -717,8 +717,7 @@ footer {
 
 .section-start--text .name {
   display: block;
-  position: absolute;
-  top: 110px;
+  top: 60px;
   font-size: 11rem;
   letter-spacing: 2rem;
   text-transform: uppercase;
