--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -14,7 +14,8 @@
 
       .name {
         display: block;
-        top: 60px;
+        position: absolute;
+        top: 65px;
         font-size: 11rem;
         letter-spacing: 2rem;
         text-transform: uppercase;
