--- a/sass/main.css
+++ b/sass/main.css
@@ -149,10 +149,10 @@ body {
 
 .anim-border--right {
   display: block;
-  position: relative;
+  position: absolute;
   border-top: 4px solid #ccc;
   width: 65%;
-  top: 100px;
+  top: 215px;
   -webkit-animation: text-border-rigth 3s ease-out;
   animation: text-border-rigth 3s ease-out;
 }
@@ -717,7 +717,8 @@ footer {
 
 .section-start--text .name {
   display: block;
-  top: 60px;
+  position: absolute;
+  top: 65px;
   font-size: 11rem;
   letter-spacing: 2rem;
   text-transform: uppercase;
