--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,10 +3,10 @@
   align-items: center;
   justify-content: end;
   width: 100%;
-  position: fixed;
   z-index: 2;
   transition: all 0.5s;
   font-family: "Montserrat", sans-serif;
+  padding: 10px 0 0 0;
 
   @include respond(phone) {
     display: none;
@@ -57,7 +57,7 @@
       color: #fff;
       padding-bottom: 0;
       margin-left: 2rem;
-      width: 150px;
+      width: 100px;
       margin-top: 10px;
       transition: all 0.1s;
 
@@ -68,7 +68,7 @@
 
         height: 100%;
         text-decoration: none;
-        font-size: 2rem;
+        font-size: 1.5rem;
         color: inherit;
 
         // &:hover {
@@ -78,9 +78,9 @@
         // }
       }
       &:hover {
-        border: 2px solid #fff;
-        border-radius: 5px;
-        padding: 5px;
+        border: 1px solid #fff;
+        border-radius: 4px;
+        padding: 3px;
       }
     }
 
