--- a/sass/main.css
+++ b/sass/main.css
@@ -408,11 +408,11 @@ footer {
       -ms-flex-pack: end;
           justify-content: end;
   width: 100%;
-  position: fixed;
   z-index: 2;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   font-family: "Montserrat", sans-serif;
+  padding: 10px 0 0 0;
 }
 
 @media (max-width: 600px) {
@@ -478,7 +478,7 @@ footer {
   color: #fff;
   padding-bottom: 0;
   margin-left: 2rem;
-  width: 150px;
+  width: 100px;
   margin-top: 10px;
   -webkit-transition: all 0.1s;
   transition: all 0.1s;
@@ -496,14 +496,14 @@ footer {
           justify-content: center;
   height: 100%;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: inherit;
 }
 
 .navbar__list--items:hover {
-  border: 2px solid #fff;
-  border-radius: 5px;
-  padding: 5px;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  padding: 3px;
 }
 
 @media (max-width: 600px) {
