--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -17,13 +17,12 @@
 }
 
 @keyframes show-text {
-  0% {
-    transform: scale(0);
+  from {
+    opacity: 0;
+    visibility: hidden;
   }
-  80% {
-    transform: scale(1.2);
-  }
-  100% {
-    transform: scale(1);
+  to {
+    opacity: 1;
+    visibility: visible;
   }
 }
