--- a/sass/main.css
+++ b/sass/main.css
@@ -43,32 +43,24 @@
 }
 
 @-webkit-keyframes show-text {
-  0% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
+  from {
+    opacity: 0;
+    visibility: hidden;
   }
-  80% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-  }
-  100% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+  to {
+    opacity: 1;
+    visibility: visible;
   }
 }
 
 @keyframes show-text {
-  0% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
+  from {
+    opacity: 0;
+    visibility: hidden;
   }
-  80% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-  }
-  100% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+  to {
+    opacity: 1;
+    visibility: visible;
   }
 }
 
@@ -745,6 +737,8 @@ footer {
   width: 65%;
   margin-left: 20px;
   text-align: center;
+  -webkit-animation: show-text 3s ease-in;
+          animation: show-text 3s ease-in;
 }
 
 @media (max-width: 1200px) {
@@ -779,6 +773,8 @@ footer {
   text-align: center;
   top: 230px;
   margin-right: 20px;
+  -webkit-animation: show-text 3s ease-in;
+          animation: show-text 3s ease-in;
 }
 
 @media (max-width: 1200px) {
