--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -24,6 +24,7 @@
         width: 65%;
         margin-left: 20px;
         text-align: center;
+        animation: show-text 3s ease-in;
 
         @include respond(tab-land) {
           letter-spacing: 25px;
@@ -52,6 +53,7 @@
         text-align: center;
         top: 230px;
         margin-right: 20px;
+        animation: show-text 3s ease-in;
 
         @include respond(tab-land) {
           letter-spacing: 25px;
