--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -20,9 +20,11 @@
   from {
     opacity: 0;
     visibility: hidden;
+    filter: blur(5px);
   }
   to {
     opacity: 1;
     visibility: visible;
+    filter: blur(0);
   }
 }
