--- a/sass/main.css
+++ b/sass/main.css
@@ -46,10 +46,14 @@
   from {
     opacity: 0;
     visibility: hidden;
+    -webkit-filter: blur(5px);
+            filter: blur(5px);
   }
   to {
     opacity: 1;
     visibility: visible;
+    -webkit-filter: blur(0);
+            filter: blur(0);
   }
 }
 
@@ -57,10 +61,14 @@
   from {
     opacity: 0;
     visibility: hidden;
+    -webkit-filter: blur(5px);
+            filter: blur(5px);
   }
   to {
     opacity: 1;
     visibility: visible;
+    -webkit-filter: blur(0);
+            filter: blur(0);
   }
 }
 
