--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -1,18 +1,22 @@
 @keyframes text-border-rigth {
   0% {
     width: 0;
+    filter: blur(5px);
   }
   100% {
     width: 65%;
+    filter: blur(0);
   }
 }
 
 @keyframes text-border-left {
   0% {
     width: 0%;
+    filter: blur(5px);
   }
   100% {
     width: 65%;
+    filter: blur();
   }
 }
 
