--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -110,13 +110,14 @@
   }
 
   &-about {
-    margin-top: 100px;
+    position: relative;
+    top: 50px;
 
     &--container {
       display: flex;
       align-items: center;
       justify-content: end;
-      height: 100%;
+      height: 70vh;
 
       @include respond(tab-port) {
         top: 0;
