Add animation to web-dev-text class

--- a/sass/main.css
+++ b/sass/main.css
@@ -88,6 +88,32 @@
   }
 }
 
+@-webkit-keyframes show-text--bottom {
+  from {
+    opacity: 0;
+    visibility: hidden;
+    bottom: 0;
+  }
+  to {
+    opacity: 1;
+    visibility: visible;
+    bottom: 50px;
+  }
+}
+
+@keyframes show-text--bottom {
+  from {
+    opacity: 0;
+    visibility: hidden;
+    bottom: 0;
+  }
+  to {
+    opacity: 1;
+    visibility: visible;
+    bottom: 50px;
+  }
+}
+
 *,
 *::after,
 *::before {
@@ -837,9 +863,10 @@ footer {
   text-align: center;
   letter-spacing: 23px;
   font-family: "Montserrat", sans-serif;
-  opacity: 0.8;
   padding-left: 20px;
   margin-top: 20px;
+  -webkit-animation: show-text--bottom 3s ease-in-out;
+          animation: show-text--bottom 3s ease-in-out;
 }
 
 @media (max-width: 1200px) {
