--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -32,3 +32,16 @@
     filter: blur(0);
   }
 }
+
+@keyframes show-text--bottom {
+  from {
+    opacity: 0;
+    visibility: hidden;
+    bottom: 0;
+  }
+  to {
+    opacity: 1;
+    visibility: visible;
+    bottom: 50px;
+  }
+}
