--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -77,9 +77,10 @@
         text-align: center;
         letter-spacing: 23px;
         font-family: "Montserrat", sans-serif;
-        opacity: 0.8;
+        // opacity: 0.8;
         padding-left: 20px;
         margin-top: 20px;
+        animation: show-text--bottom 3s ease-in-out;
 
         @include respond(tab-land) {
           letter-spacing: 22px;
