--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -111,7 +111,10 @@
 
   &-about {
     position: relative;
-    top: 150px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 70vh;
 
     &--container {
       display: flex;
