Change text about to flex-end

--- a/sass/main.css
+++ b/sass/main.css
@@ -934,7 +934,7 @@ footer {
           align-items: center;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
-          justify-content: end;
+          justify-content: flex-end;
   height: 70vh;
 }
 
