--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -119,7 +119,7 @@
     &--container {
       display: flex;
       align-items: center;
-      justify-content: end;
+      justify-content: flex-end;
       height: 70vh;
 
       @include respond(tab-port) {
