--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import 'base/animations';
 @import 'base/base';
 @import 'base/global';
+@import 'base/icons';
 @import 'base/utilities';
 // COMPONENTS
 @import 'components/button';
