Added icon GitHub and add link to my profile on GitHub

--- a/sass/main.css
+++ b/sass/main.css
@@ -218,6 +218,16 @@ body {
   font-size: 3rem;
 }
 
+.icons > a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #fff;
+}
+
 .u-center-text {
   text-align: center;
 }
