--- a/sass/base/_icons.scss
+++ b/sass/base/_icons.scss
@@ -4,4 +4,10 @@
     width: 100%;
     text-align: center;
     font-size: 3rem;
+
+    &>a {
+        display: flex;
+        justify-content: center;
+        color: #fff;
+    }
 }
