--- a/sass/main.css
+++ b/sass/main.css
@@ -211,21 +211,23 @@ body {
 }
 
 .icons {
+  display: block;
   position: absolute;
   bottom: 0;
-  width: 100%;
-  text-align: center;
-  font-size: 3rem;
+  text-indent: -9999px;
+  width: 36px;
+  height: 36px;
+  background-image: url("../../icon/github-white.svg");
+  background-size: 36px 36px;
+  fill: red;
 }
 
-.icons > a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: #fff;
+.icons:hover {
+  fill: #fff;
+}
+
+.icons svg {
+  fill: red;
 }
 
 .u-center-text {
