--- a/sass/base/_icons.scss
+++ b/sass/base/_icons.scss
@@ -6,13 +6,23 @@
     bottom: 0;
 }
 
-.icons {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    text-indent: -9999px;
-    width: 36px;
-    height: 36px;
-    background-image: url('../../icon/github-white.svg');
-    background-size: 36px 36px;
+.icon {
+
+    &--github {
+        text-indent: -9999px;
+        width: 36px;
+        height: 36px;
+        background-size: 36px 36px;
+        background-image: url('../../icon/github-white.svg');
+        margin: 0 5px;
+    }
+
+    &--linkedin {
+        text-indent: -9999px;
+        width: 36px;
+        height: 36px;
+        background-size: 36px 36px;
+        background-image: url('../../icon/linkedin-white.svg');
+        margin: 0 5px;
+    }
 }
