--- a/sass/base/_icons.scss
+++ b/sass/base/_icons.scss
@@ -25,4 +25,40 @@
         background-image: url('../../icon/linkedin-white.svg');
         margin: 0 5px;
     }
+
+    &--twitter {
+        text-indent: -9999px;
+        width: 36px;
+        height: 36px;
+        background-size: 36px 36px;
+        background-image: url('../../icon/twitter-white.svg');
+        margin: 0 5px;
+    }
+
+    &--instagram {
+        text-indent: -9999px;
+        width: 36px;
+        height: 36px;
+        background-size: 36px 36px;
+        background-image: url('../../icon/instagram-white.svg');
+        margin: 0 5px;
+    }
+
+    &--fb {
+        text-indent: -9999px;
+        width: 36px;
+        height: 36px;
+        background-size: 36px 36px;
+        background-image: url('../../icon/fb-white.svg');
+        margin: 0 5px;
+    }
+
+    &--mail {
+        text-indent: -9999px;
+        width: 36px;
+        height: 36px;
+        background-size: 36px 36px;
+        background-image: url('../../icon/mail-white.svg');
+        margin: 0 5px;
+    }
 }
