--- a/sass/base/_icons.scss
+++ b/sass/base/_icons.scss
@@ -8,6 +8,7 @@
 
 .icon {
 
+
     &--github {
         text-indent: -9999px;
         width: 36px;
@@ -15,6 +16,12 @@
         background-size: 36px 36px;
         background-image: url('../../icon/github-white.svg');
         margin: 0 5px;
+        transition: all .2s ease-in-out;
+
+
+        &:hover {
+            transform: translateY(-2px);
+        }
     }
 
     &--linkedin {
@@ -24,6 +31,12 @@
         background-size: 36px 36px;
         background-image: url('../../icon/linkedin-white.svg');
         margin: 0 5px;
+        transition: all .2s ease-in-out;
+
+
+        &:hover {
+            transform: translateY(-2px);
+        }
     }
 
     &--twitter {
@@ -33,6 +46,12 @@
         background-size: 36px 36px;
         background-image: url('../../icon/twitter-white.svg');
         margin: 0 5px;
+        transition: all .2s ease-in-out;
+
+
+        &:hover {
+            transform: translateY(-2px);
+        }
     }
 
     &--instagram {
@@ -42,6 +61,12 @@
         background-size: 36px 36px;
         background-image: url('../../icon/instagram-white.svg');
         margin: 0 5px;
+        transition: all .2s ease-in-out;
+
+
+        &:hover {
+            transform: translateY(-2px);
+        }
     }
 
     &--fb {
@@ -51,6 +76,12 @@
         background-size: 36px 36px;
         background-image: url('../../icon/fb-white.svg');
         margin: 0 5px;
+        transition: all .2s ease-in-out;
+
+
+        &:hover {
+            transform: translateY(-2px);
+        }
     }
 
     &--mail {
@@ -60,5 +91,11 @@
         background-size: 36px 36px;
         background-image: url('../../icon/mail-white.svg');
         margin: 0 5px;
+        transition: all .2s ease-in-out;
+
+
+        &:hover {
+            transform: translateY(-2px);
+        }
     }
 }
