Added container to wrapp all html code

--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 
+.container {
+  background-color: #264653;
+  border-radius: 5px;
+}
+
 .heading-secondary {
   font-family: "Montserrat", sans-serif;
   font-size: 3.5rem;
@@ -37,6 +42,7 @@
       -webkit-animation: text-border-rigth 2.7s ease-out;
       animation: text-border-rigth 2.7s ease-out;
     }
+
     &--left {
       display: block;
       position: absolute;
