--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,7 +3,7 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 html {
@@ -32,6 +32,7 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color: #eef4f2;
-  background-color: #264653;
+  background-color: #fff;
+  padding: 10px;
   overflow-x: hidden;
 }
