--- a/sass/main.css
+++ b/sass/main.css
@@ -119,8 +119,8 @@
 *::before {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
@@ -158,8 +158,14 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color: #eef4f2;
-  background-color: #264653;
+  background-color: #fff;
+  padding: 10px;
   overflow-x: hidden;
+}
+
+.container {
+  background-color: #264653;
+  border-radius: 5px;
 }
 
 .heading-secondary {
