--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -21,14 +21,19 @@
 }
 
 @keyframes show-text {
-  from {
+  0% {
     opacity: 0;
     visibility: hidden;
+    transform: translateY(100px);
     filter: blur(5px);
   }
-  to {
+  50% {
+    transform: translateY(-30px);;
+  }
+  100% {
     opacity: 1;
     visibility: visible;
+    transform: translateY(0px);;
     filter: blur(0);
   }
 }
