--- a/sass/main.css
+++ b/sass/main.css
@@ -59,30 +59,46 @@
 }
 
 @-webkit-keyframes show-text {
-  from {
+  0% {
     opacity: 0;
     visibility: hidden;
+    -webkit-transform: translateY(100px);
+            transform: translateY(100px);
     -webkit-filter: blur(5px);
             filter: blur(5px);
   }
-  to {
+  50% {
+    -webkit-transform: translateY(-30px);
+            transform: translateY(-30px);
+  }
+  100% {
     opacity: 1;
     visibility: visible;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
     -webkit-filter: blur(0);
             filter: blur(0);
   }
 }
 
 @keyframes show-text {
-  from {
+  0% {
     opacity: 0;
     visibility: hidden;
+    -webkit-transform: translateY(100px);
+            transform: translateY(100px);
     -webkit-filter: blur(5px);
             filter: blur(5px);
   }
-  to {
+  50% {
+    -webkit-transform: translateY(-30px);
+            transform: translateY(-30px);
+  }
+  100% {
     opacity: 1;
     visibility: visible;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
     -webkit-filter: blur(0);
             filter: blur(0);
   }
@@ -909,8 +925,8 @@ footer {
   width: 65%;
   margin-left: 20px;
   text-align: center;
-  -webkit-animation: show-text 3s ease-in;
-          animation: show-text 3s ease-in;
+  -webkit-animation: show-text 2s ease-in-out;
+          animation: show-text 2s ease-in-out;
 }
 
 @media (max-width: 1200px) {
