--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,6 +8,25 @@
   font-family: "Montserrat", sans-serif;
   padding: 10px 0 0 0;
 
+  &__text {
+    display: flex;
+    align-self: flex-start;
+    margin-left: 10px;
+
+    span {
+      text-transform: uppercase;
+      font-size: 15px;
+      font-weight: lighter;
+
+      &:last-child {
+        color: orange;
+        font-size: 18px;
+        font-weight: bold;
+      }
+    }
+
+  }
+
   @include respond(phone) {
     display: none;
   }
