--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -92,6 +92,10 @@
         // TODO: kolor do zmiany, ale jeszcze nie wiem na jaki???
         color: rgb(196, 161, 98);
       }
+
+      @include respond(tab-port) {
+        margin: 0 20px;
+      }
     }
 
     @include respond(phone) {
@@ -178,10 +182,10 @@
       top: 22px;
     }
   }
-  // TODO: Tymczasowo wyłączony burger
-  // @include respond (phone) {
-  //   display: block;
-  // }
+
+  @include respond (phone) {
+    display: block;
+  }
 }
 
 .overlay {
