--- a/sass/main.css
+++ b/sass/main.css
@@ -655,6 +655,12 @@ footer {
   color: #c4a162;
 }
 
+@media (max-width: 900px) {
+  .navbar__list--items {
+    margin: 0 20px;
+  }
+}
+
 @media (max-width: 600px) {
   .navbar__list {
     display: none;
@@ -742,6 +748,12 @@ footer {
 
 .button_container span:nth-of-type(3) {
   top: 22px;
+}
+
+@media (max-width: 600px) {
+  .button_container {
+    display: block;
+  }
 }
 
 .overlay {
